syntax = "proto3";
package papillon6814.lotusibc.blog;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "blog/timedout_post.proto";
import "blog/send_post.proto";
import "blog/post.proto";

option go_package = "github.com/papillon6814/lotus-ibc/x/blog/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2

	// Queries a timedoutPost by index.
	rpc TimedoutPost(QueryGetTimedoutPostRequest) returns (QueryGetTimedoutPostResponse) {
		option (google.api.http).get = "/papillon6814/lotusibc/blog/timedoutPost";
	}


	// Queries a sendPost by index.
	rpc SendPost(QueryGetSendPostRequest) returns (QueryGetSendPostResponse) {
		option (google.api.http).get = "/papillon6814/lotusibc/blog/sendPost";
	}


	// Queries a post by index.
	rpc Post(QueryGetPostRequest) returns (QueryGetPostResponse) {
		option (google.api.http).get = "/papillon6814/lotusibc/blog/post";
	}

}

// this line is used by starport scaffolding # 3
message QueryGetTimedoutPostRequest {}

message QueryGetTimedoutPostResponse {
	TimedoutPost TimedoutPost = 1;
}
message QueryGetSendPostRequest {}

message QueryGetSendPostResponse {
	SendPost SendPost = 1;
}
message QueryGetPostRequest {}

message QueryGetPostResponse {
	Post Post = 1;
}
